--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-    <title>Agência XPTO</title>
+    <title>Land Page</title>
 
     <link rel="stylesheet" href="src/css/estilos.css">
 </head>
